--- a/sections/hosen-countdown.liquid
+++ b/sections/hosen-countdown.liquid
@@ -48,7 +48,7 @@
       </div>
       
       {% if section.settings.button_label != blank %}
-        <a href="{{ section.settings.button_link }}" class="hosen-button hosen-button--transparent">
+        <a href="{{ section.settings.button_link }}" class="hosen-button">
           <span>{{ section.settings.button_label }}</span>
           <span class="hosen-button__icon">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
