--- a/assets/section-hosen-footer.css
+++ b/assets/section-hosen-footer.css
@@ -41,7 +41,6 @@
 	font-family: "Oswald", sans-serif;
 	font-size: 2.8rem;
 	font-weight: 700;
-	text-transform: uppercase;
 	margin: 0;
 	color: rgb(var(--color-foreground));
 }
@@ -185,6 +184,7 @@
 
 @media screen and (min-width: 750px) {
 	.hosen-footer__newsletter-button {
+
 		padding: 1.2rem 2rem;
 		font-size: 1.2rem;
 	}
@@ -327,7 +327,7 @@
 	}
 }
 
-@media screen and (max-width: 749px) {
+@media screen and (max-width: 750px) {
 	.hosen-footer__main {
 		grid-template-columns: 1fr 1fr;
 		gap: 1.5rem;
@@ -347,7 +347,7 @@
 	}
 
 	.hosen-footer__newsletter-field {
-		flex-direction: column;
+		flex-direction: row;
 	}
 
 	.hosen-footer__newsletter-input {
